# start-code

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  env.example  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: ci.yml  main.yml
customizations/: index.html
docs/: customizations.md  gotchas.md  index.md
gotchas/: index.html
search/: search_index.json
tests/: test_version.py
