[project]
name = "start-code"
requires-python = "== 3.13.3"
description = "Boilerplate Python Code."
authors = [
  {name="Marcelino Veloso III", email="hi@mv3.dev" }
]
version = "0.0.2"
dependencies = [
  "environs >= 14.1"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
    "mkdocstrings[python]>=0.27.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra -q -vv --cov --doctest-modules"
testpaths = ["tests", "src"]

[tool.ruff]
ignore = ["F401", "F403"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]
