[project]
name = "start-code"
requires-python = ">= 3.14"
description = "Boilerplate Python Code."
authors = [
  {name="Marcelino Veloso III", email="hi@mv3.dev" }
]
version = "0.0.3"
dependencies = [
    "environs >= 14.3"
]

[dependency-groups]
dev = [
    # notebooks
    "ipykernel>=6.30.1",
    # docs
    "mkdocs >= 1.6.1",
    "mkdocs-material >= 9.6.20",
    "mkdocstrings[python] >= 0.30.1",
    # testing
    "pytest >= 8.4",
    "pytest-cov >= 5.0",
]

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-ra -q -vv --cov --doctest-modules"
testpaths = ["tests", "src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["F401", "F403", "E501"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]
