[project]
name = "start-code"
requires-python = ">= 3.14"
description = "Boilerplate Python Code."
authors = [
  {name="Marcelino Veloso III", email="hi@mv3.dev" }
]
version = "0.0.4"
dependencies = [
    "environs >= 14.5",
]

[dependency-groups]
dev = [
    # docs
    "zensical>=0.0.11",
    # notebooks
    "ipykernel>=7.1",
    # testing
    "pytest >= 9.0",
    "pytest-cov >= 7.0",
]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q -vv --cov --doctest-modules"
testpaths = ["tests", "src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["F401", "F403", "E501"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]
